obstacle creation/errors
dino_move.c:19:21: error: 'NULL' undeclared (first use in this function)
     void *lw = mmap(NULL, MAP_SIZE,
                     ^
dino_move.c:20:21: error: 'PROT_READ' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                     ^
dino_move.c:20:31: error: 'PROT_WRITE' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                               ^
dino_move.c:20:43: error: 'MAP_SHARED' undeclared (first use in this function)
                     PROT_READ|PROT_WRITE, MAP_SHARED,
                                           ^
dino_move.c:22:12: error: 'MAP_FAILED' undeclared (first use in this function)
     if(lw==MAP_FAILED){ perror("mmap"); return 1; }
            ^
dino_move.c:25:14: error: unknown type name 'uint32_t'
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
              ^
dino_move.c:25:34: error: 'uint32_t' undeclared (first use in this function)
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
                                  ^
dino_move.c:25:44: error: expected expression before ')' token
     volatile uint32_t *dino_y = (uint32_t *)((char*)lw + DINO_Y_OFFSET);
                                            ^
dino_move.c:26:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                       ^
dino_move.c:26:24: error: 'cg_x' undeclared (first use in this function)
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                        ^
dino_move.c:26:44: error: expected expression before ')' token
     volatile uint32_t *cg_x   = (uint32_t *)((char*)lw + CG_X_OFFSET);
                                            ^
dino_move.c:27:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                       ^
dino_move.c:27:24: error: 'cg_y' undeclared (first use in this function)
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                        ^
dino_move.c:27:44: error: expected expression before ')' token
     volatile uint32_t *cg_y   = (uint32_t *)((char*)lw + CG_Y_OFFSET);
                                            ^
dino_move.c:28:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                       ^
dino_move.c:28:24: error: 'lava_x' undeclared (first use in this function)
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                        ^
dino_move.c:28:44: error: expected expression before ')' token
     volatile uint32_t *lava_x = (uint32_t *)((char*)lw + LAVA_X_OFFSET);
                                            ^
dino_move.c:29:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);
                       ^
dino_move.c:29:24: error: 'lava_y' undeclared (first use in this function)
     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);
                        ^
dino_move.c:29:44: error: expected expression before ')' token
     volatile uint32_t *lava_y = (uint32_t *)((char*)lw + LAVA_Y_OFFSET);
